Success responses for delete, post and put
